Transform chefs into users with different roles and permissions